--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "largetable",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Set an horizontal scrollbar on large tables",
   "main": "largetable.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/edinum/largetable"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
